<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_view_shop"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_shop_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_shop"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/shop_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_view_shop"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_type_shop"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/type"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_view_shop"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_shop" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_view_shop"
        app:layout_constraintTop_toBottomOf="@+id/tv_type_shop" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#DFD6D6"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        tools:layout_editor_absoluteX="-16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_update"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="@string/update"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_delete"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="Delete"
        app:layout_constraintTop_toBottomOf="@+id/button_update"
        app:layout_constraintEnd_toEndOf="@id/button_update"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_view_products"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        android:text="@string/view"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_delete"
        app:layout_constraintStart_toStartOf="@id/button_delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>